# oatpp-websocket-server-client-example

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: App.cpp  WSListener.cpp
server/: CMakeLists.txt
server/src/: App.cpp
server/src/controller/: WsApiController.hpp
server/src/websocket/: WSListener.cpp
